<resources>
    <string name="app_name">Путеводитель</string>
    <string name="password">123</string>
    <string name="enter_button_text">Войти</string>
    <string name="password_text">Пароль</string>
    <string name="login_text">Логин</string>
    <string name="welcome_text">Hello, </string>

    <string name="country_name_string">Россия</string>
    <string name="country_square_string">17 125 191 км²</string>
    <string name="about_title_string">Об авторе</string>
    <string name="version">Версия 11.0</string>
    <string name="author_name">Антюхин И.Г.</string>
    <string name="country_info_menu_item_string">Информация о стране</string>
    <string name="saved_countries_menu_item_string">Сохранённые страны</string>
    <string name="choose_country_menu_item_string">Выбрать страну</string>
    <string name="about_menu_item_string">Об авторе</string>
    <string name="cad_cancelButtonText">Отмена</string>
    <string name="cad_saveButtonText">Сохранить</string>
    <string name="cad_infoButtonText">Информация о стране</string>
    <string name="cad_delButtonText">Удалить</string>
    <string name="cad_searchButtonText">Поиск</string>
    <string name="browser_chooser_title">ВЫберите браузер</string>

    <string-array name="countries_list">
        <item>Австралия</item>
        <item>Англия</item>
        <item>Белорусия</item>
        <item>Бразилия</item>
        <item>Германия</item>
        <item>Греция</item>
        <item>Грузия</item>
        <item>Дания</item>
        <item>Египет</item>
        <item>Израиль</item>
        <item>Индия</item>
        <item>Ирак</item>
        <item>Иран</item>
        <item>Испания</item>
        <item>Италия</item>
        <item>Латвия</item>
        <item>Литва</item>
        <item>Мексика</item>
        <item>Монголия</item>
        <item>Россия</item>
        <item>Румыния</item>
        <item>Сальвадор</item>
        <item>Самоа</item>
        <item>Сенегал</item>
        <item>Канада</item>
    </string-array>

    <string-array name="saved_countries_list">
        <item>США</item>
        <item>Израиль</item>
        <item>Белорусия</item>
        <item>Италия</item>
        <item>Россия</item>
    </string-array>
</resources>
